2022-02-22  Antti Koivisto  <antti@apple.com>

        [CSS container Queries] getComputedStyle should update style for invalid query containers
        https://bugs.webkit.org/show_bug.cgi?id=237038

        Reviewed by Darin Adler.

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::hasValidStyleForProperty):

        We always need to update style inside a query container since a change to it may affect descendants.

2022-02-22  Kate Cheney  <katherine_cheney@apple.com>

        Authenticated encryption console logging causing performance regressions
        https://bugs.webkit.org/show_bug.cgi?id=236987
        <rdar://problem/89108253>

        Reviewed by Chris Dumez.

        No new tests. Behavior confirmed by existing crypto/subtle tests.

        For clients that use repeated unauthenticated AES encryption, console
        logging may cause perf issues. We should log the authenticated
        encryption warning once per context.

        * crypto/SubtleCrypto.cpp:
        (WebCore::SubtleCrypto::addAuthenticatedEncryptionWarningIfNecessary):
        * dom/ScriptExecutionContext.h:
        (WebCore::ScriptExecutionContext::hasLoggedAuthenticatedEncryptionWarning const):
        (WebCore::ScriptExecutionContext::setHasLoggedAuthenticatedEncryptionWarning):

2022-02-22  Tim Nguyen  <ntim@apple.com>

        Re-style PDF.js form fields to match PDFKit
        https://bugs.webkit.org/show_bug.cgi?id=237041

        Reviewed by Geoffrey Garen.

        Remove black border on :hover, only display light blue background on hover, display blue focusring on :focus.

        * Modules/pdfjs-extras/style-cocoa.css:
        (.annotationLayer :is():

2022-02-22  Jer Noble  <jer.noble@apple.com>

        [Cocoa] Partial rollout of r289946, broke Netflix
        https://bugs.webkit.org/show_bug.cgi?id=237019
        <rdar://89261425>

        Reviewed by Eric Carlson.
